оставляю html начинаю верстать по своему

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
   //= template/main-page.html
 
   //= template/footer.html
-  
+
+
+
+
+  <script src="js/main.js"> </script>
 </body>
 </html>
 
