начал все снова на работе

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 <body>
   //= template/header.html
 
-  //= template/main-page.html
+  <!-- //= template/main-page.html -->
 
-  //= template/footer.html
+  <!-- //= template/footer.html -->
 
 
 
