сверстал заголовок статистики

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
 
   <title>Барбершоп "Бородинский"</title>
 </head>
+
 <body>
   //= template/header.html
 
-  <!-- //= template/main-page.html -->
+  //= template/main-page.html
 
   <!-- //= template/footer.html -->
 
@@ -20,6 +22,5 @@
 
   <script src="js/main.js"> </script>
 </body>
+
 </html>
-
-
